--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@
     --text-color : #cccccc;               /* text      */
 }
 
+/* ########## 1- Nav section ########## */
 header {
     background-color: var(--nav-color);
     width: 100%;
@@ -61,6 +62,7 @@ section {
     padding: 100px 200px;
 }
 
+/* ########## 2- Main section ########## */
 .main {
     width: 100%;
     min-height: 100vh;
@@ -126,6 +128,7 @@ section {
     color: var(--nav-color);
 }
 
+/* ########## 3- Services section ########## */
 #services {
     background-color: var(--nav-color);
     min-height: 100vh;
@@ -196,13 +199,13 @@ section {
     list-style-type: "- ";
 }
 
+/* ########## 4- Projects section ########## */
 .projects {
     background-color: var(--FlatBlue-color);
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
 
 #projects-title {
@@ -225,7 +228,7 @@ section {
 }
 
 .project-card:hover {
-    transform: scale(1.02);
+    transform: scale(1.05);
 }
 
 .project-card:hover .project-image {
@@ -264,4 +267,90 @@ section {
 .see-project:hover {
     color: var(--DarkBlue-color);
     text-decoration: none;
+}
+
+/* ########## 5- Resume section ########## */
+.resume {
+    background-color: var(--nav-color);
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#resume-content {
+    box-shadow: 0 5px 25px var(--shadow3-color);
+    margin: 0;
+    padding: 0;
+    border-radius: 10px;
+    background-color: var(--FlatBlue-color);
+}
+
+.div-resume {
+    margin: 0;
+    padding: 0;
+}
+
+#summary {
+    background-color: var(--BR-color);
+    padding: 40px;
+    color: var(--FlatBlue-color);
+    border-radius: 10px 0 0 10px;
+    margin: auto;
+}
+
+#p-summary {
+    padding: 100px 0;
+    /* margin: auto; */
+
+}
+
+#summary-header {
+    display: block;
+    text-align: center;
+    font-size: 1.2em;
+    font-weight: 800;
+    color: var(--DarkBlue-color);
+}
+
+.col-header {
+    color: var(--DarkBlue-color);
+    font-weight: 600;
+}
+
+.row-header {
+    color: var(--DarkBlue-color);
+}
+
+#pdf {
+    background-color: var(--FlatBlue-color);
+    border-radius:0 10px 10px 0;
+    padding: 50px;
+    text-align: center;
+    margin: auto;
+
+}
+
+#pdf p {
+    margin-bottom: 50px;
+    color: var(--nav-color);
+    font-size: 1.3em;
+    font-weight: 500;
+    letter-spacing: 2px;
+}
+
+#pdf p span{
+    font-size: 0.8em;
+}
+
+#pdf a img {
+    background-color: var(--BR-color);
+    padding: 20px;
+    box-shadow: 0 10px 20px var(--DarkBlue-color);
+    border-radius: 20px;
+    width: 7em;
+    transition: 0.5s ease;
+}
+
+#pdf a img:hover {
+    transform: scale(1.1) rotate(5deg);
 }
