--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins', 'Montserrat', sans-serif;
 }
 
 :root {
@@ -29,7 +30,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 200px;
+    padding: 10px 150px;
     box-shadow: 0 4px 14px -4px var(--shadow2-color)
 }
 
@@ -40,18 +41,17 @@ header {
     font-weight: 700;
     font-size: 1.8em;
     transition: 0.5s ease;
+    font-family: 'Montserrat'
 }
-
-/* .logo:hover {
-    color: #000;
-} */
 
 .navigation a {
     color: var(--FlatBlue-color);
     text-decoration: none;
-    font-size: 1.1em;
+    font-size: 0.9em;
     font-weight: 500;
-    padding-left: 30px;
+    /* margin-left: 30px; */
+    padding: 10px;
+    border-radius: 100px;
     transition: 0.5s ease;
 }
 
@@ -59,11 +59,32 @@ header {
     color: #000;
 }
 
+
+.hamburger-menu {
+    position: absolute;
+    /* top: 0.75em; */
+    align-items: center;
+    right: 1.5em;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 20px;
+}
+
+.hamburger-menu .bar {
+    height: 3px;
+    width: 100%;
+    background-color: var(--FlatBlue-color);
+    border-radius: 10px;
+    align-items: center;
+}
+
+/* ########## 2- Main section ########## */
 section {
     padding: 100px 200px;
 }
 
-/* ########## 2- Main section ########## */
 .main {
     width: 100%;
     min-height: 100vh;
@@ -75,7 +96,9 @@ section {
     background-color: var(--FlatBlue-color);
     background-position: right bottom;
 }
-
+.main div {
+    width: 100%;
+}
 .main h2 {
     color: var(--DarkBlue-color);
     font-size: 1.6em;
@@ -121,7 +144,7 @@ section {
 .social-icons a {
     color: var(--DarkBlue-color);
     font-size: 1.7em;
-    padding-right: 30px;
+    padding:0 15px;
     transition: 0.8s ease;
 }
 
@@ -302,7 +325,6 @@ section {
 #p-summary {
     padding: 100px 0;
     /* margin: auto; */
-
 }
 
 #summary-header {
@@ -336,7 +358,7 @@ section {
     color: var(--nav-color);
     font-size: 1.3em;
     font-weight: 500;
-    letter-spacing: 2px;
+    letter-spacing: 1.1px;
 }
 
 #pdf p span{
@@ -353,7 +375,7 @@ section {
 }
 
 #pdf a img:hover {
-    transform: scale(1.1) rotate(5deg);
+    transform: scale(1.1) rotate(-5deg);
 }
 
 /* ########## 6- Footer ########## */
@@ -368,7 +390,6 @@ footer {
     padding: 25px 100px;
 }
 
-
 .footer-div a {
     text-decoration: none;
     color: var(--BR-color);
@@ -378,3 +399,280 @@ footer {
     text-decoration: underline;
 }
 
+/* ########## 7- @media ########## */
+
+@media (max-width: 1250px) {
+    section {
+        padding: 50px 100px;
+    }
+    
+    .main h2 {
+        font-size: 1.4em;
+    }
+
+    .main h2 span {
+        font-size: 2.3em;
+    }
+
+    .main h3 {
+        font-size: 1.7em;
+    }
+    .main {
+        background-size: 50%;
+    }
+
+    .title {
+        font-size: 2.1em;
+    }
+}
+
+@media (max-width: 995px) {
+    #summary {
+        border-radius:  10px 10px 0 0;
+        width: 100%;
+    }
+
+    #p-summary {
+        padding: 10px 0;
+    }
+
+    #pdf {
+        padding: 20px;
+    }
+    
+    #pdf p {
+        margin-bottom: 20px;
+        font-size: 1.3em;
+        font-weight: 500;
+    }
+    
+    #pdf p span{
+        font-size: 0.8em;
+    }
+    
+    #pdf a img {
+        padding: 13px;
+        width: 5em;
+    }
+
+}
+
+@media (max-width: 940px) {
+    .hamburger-menu {
+        display: flex;
+    }
+
+    .navigation {
+        display: none;
+        width: 100%;
+        text-align: center;
+        padding: 0.5em 1em;
+        flex-direction: column;
+    }
+    header {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 10px 10px;
+    }
+
+    .navigation a{
+        width: 100%;
+        /* flex-direction: column; */
+    }
+
+    .navigation.active {
+        display: flex;
+    }
+
+    section {
+        padding: 30px 70px;
+    }
+
+    .logo {
+        padding-left: 70px;
+        font-size: 1.6em;
+    }
+    .main {
+        background-size: 55%;
+    }
+
+    .title {
+        font-size: 2em;
+    }
+}
+
+@media (max-width: 850px) {
+    footer {
+        display: block;
+    }
+
+    .footer-div span {
+        display: block;
+    }
+}
+
+@media (max-width: 820px) {
+
+    .main h2 {
+        font-size: 1.2em;
+    }
+
+    .main h2 span {
+        font-size: 2em;
+    }
+
+    .main h3 {
+        font-size: 1.4em;
+    }
+
+    .main {
+        background-size: 65%;
+    }
+
+    .logo {
+        padding-left: 60px;
+        font-size: 1.5em;
+    }
+
+    .card, .project-card {
+        width: 18em;
+        /* padding: 25px;
+        margin: 15px; */
+    }
+
+    .icon i img {    
+        width: 5em;
+    }
+
+    .title {
+        font-size: 1.5em;
+    }
+}
+
+@media (max-width: 650px) {
+    section {
+        padding: 15px 40px;
+    }
+
+    .main h2 {
+        font-size: 1.2em;
+    }
+
+    .main h2 span {
+        font-size: 1.5em;
+    }
+
+    .main h3 {
+        font-size: 1.3em;
+    }
+
+    .main {
+        background-size: 65%;
+    }
+    .logo {
+        padding-left: 50px;
+        font-size: 1.4em;
+    }
+
+    .title {
+        font-size: 1.3em;
+    }
+}
+
+@media (max-width: 530px) {
+    #p-summary {
+        font-size: 0.8em;
+    }
+}
+
+@media (max-width: 460px) {
+    section {
+        padding: 15px 40px;
+    }
+
+    .main h2 {
+        font-size: 1em;
+    }
+
+    .main h2 span {
+        font-size: 1.4em;
+    }
+
+    .main h3 {
+        font-size: 1em;
+    }
+
+    .main {
+        text-align: center;
+        background-size: 70%;
+    }
+    .logo {
+        padding-left: 40px;
+        font-size: 1.3em;
+    }
+
+    .card {
+        width: 14em;
+        padding: 10px;
+        margin: 10px;
+    }
+    
+    .project-card {
+        width: 14em;
+    }
+
+    .icon i img {    
+        width: 4em;
+    }
+
+    .title {
+        font-size: 1.1em;
+    }
+
+    .info h3 {
+        font-size: 1em;
+    }
+    .info p, .inside li{
+        font-size: 0.8em;
+    }
+
+    .project-category {
+        font-size: 0.7em;
+    }
+    
+    .project-title {
+        font-size: 0.8em;
+    }
+}
+
+@media (max-width: 375px) {
+    section {
+        padding: 15px 20px;
+    }
+
+    .main h2 {
+        font-size: 0.8em;
+    }
+
+    .main h2 span {
+        font-size: 1.2em;
+    }
+
+    .main h3 {
+        font-size: 0.9em;
+    }
+
+    .main {
+        text-align: center;
+        background-size: 70%;
+    }
+
+    .logo {
+        padding-left: 30px;
+        font-size: 1.1em;
+    }
+
+    .title {
+        font-size: 1em;
+    }
+}
