--- a/css/style.css
+++ b/css/style.css
@@ -330,11 +330,16 @@ section {
     text-align: center;
     font-size: 1.2em;
     font-weight: 800;
+    color: var(--footer-color);
 }
 
 .col-header {
     font-size: 1.2em;
     font-weight: 700;
+}
+
+.row-header {
+    color: var(--footer-color);
 }
 
 #pdf {
