--- a/css/style.css
+++ b/css/style.css
@@ -92,9 +92,11 @@ section {
     background-color: var(--FlatBlue-color);
     background-position: right bottom;
 }
+
 .main div {
     width: 100%;
 }
+
 .main h2 {
     color: var(--DarkBlue-color);
     font-size: 1.6em;
@@ -299,6 +301,7 @@ section {
     justify-content: center;
     align-items: center;
 }
+
 #resume-content {
     box-shadow: 0 5px 25px var(--shadow3-color);
     margin: 0;
@@ -348,7 +351,6 @@ section {
     padding: 50px;
     text-align: center;
     margin: auto;
-
 }
 
 #pdf p {
@@ -367,7 +369,7 @@ section {
     background-color: var(--BR-color);
     padding: 20px;
     box-shadow: 0 5px 15px var(--DarkBlue-color);
-    border-radius: 10px;
+    border-radius: 2px 2px 10px 2px;
     width: 7em;
     transition: 0.5s ease;
 }
@@ -452,7 +454,6 @@ footer {
         padding: 13px;
         width: 5em;
     }
-
 }
 
 @media (max-width: 940px) {
@@ -697,6 +698,7 @@ footer {
     .card {
         width: 14em;
         padding: 10px;
+        padding-bottom: 30px;
         margin: 10px;
     }
     
@@ -729,7 +731,6 @@ footer {
     footer {
         padding: 25px 10px;
     }
-
 }
 
 @media (max-width: 375px) {
@@ -737,12 +738,8 @@ footer {
         padding: 15px 20px;
     }
 
-    .main h2 {
-        font-size: 0.8em;
-    }
-
     .main h2 span {
-        font-size: 1.2em;
+        font-size: 1.3em;
     }
 
     .main h3 {
@@ -761,5 +758,4 @@ footer {
     footer {
         padding: 25px 10px;
     }
-
 }
