--- a/css/style.css
+++ b/css/style.css
@@ -203,6 +203,7 @@ section {
 
 .icon i img {    
     width: 7em;
+    height: auto;
 }
 
 .info {
@@ -262,6 +263,7 @@ section {
 
 .project-image img {
     width: 100%;
+    height: auto;
 }
 
 .project-info {
@@ -467,7 +469,6 @@ footer {
         align-items: center;
         display: flex;
         justify-content: center;
-        align-items: center;
         z-index: 998;
     }
     #toggle2 {
@@ -479,7 +480,6 @@ footer {
         align-items: center;
         display: flex;
         justify-content: center;
-        align-items: center;
         z-index: 997;
     }
 
